--- a/Console/Console/Console.vcxproj.filters
+++ b/Console/Console/Console.vcxproj.filters
@@ -78,5 +78,11 @@
     <ClCompile Include="StringMethod.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="FuncOver.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="7_24 work .cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
