슬라이드 퍼즐 과제 7_29일 수정중

--- a/Console/Console/Console.vcxproj
+++ b/Console/Console/Console.vcxproj
@@ -163,7 +163,9 @@
     <ClCompile Include="7_26 work.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
     </ClCompile>
-    <ClCompile Include="7_26 work_2.cpp" />
+    <ClCompile Include="7_26 work_2.cpp">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
+    </ClCompile>
     <ClCompile Include="Char and String .cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
     </ClCompile>
